--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,11 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.3",
-        "illuminate/http": "~5.3"
+        "illuminate/support": "~5.2",
+        "illuminate/http": "~5.2",
+        "prettus/l5-repository": "~2.6",
+        "league/fractal": "^0.14.0",
+        "prettus/laravel-validation": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
