--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,17 @@ php:
 
 sudo: false
 
-install: travis_retry composer install --no-interaction --prefer-source
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+env:
+  global:
+    - setup=basic
+    - COMPOSER_DISCARD_CHANGES=true
+    - COMPOSER_NO_INTERACTION=1
+    - COMPOSER_DISABLE_XDEBUG_WARN=1
+
+install: travis_retry composer install --prefer-dist
 
 script: vendor/bin/phpunit
