--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.6
   - 7.0
   - 7.1
 
@@ -21,3 +20,8 @@ env:
 install: travis_retry composer install --prefer-dist
 
 script: vendor/bin/phpunit
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
