--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
 language: php
 
-php:
-  - 7.0
-  - 7.1
-
 sudo: false
 
-cache:
-  directories:
-    - $HOME/.composer/cache
+matrix:
+  include:
+    - php: 5.6
+    - php: 7.0
+    - php: 7.1
 
-env:
-  global:
-    - setup=basic
-    - COMPOSER_DISCARD_CHANGES=true
-    - COMPOSER_NO_INTERACTION=1
-    - COMPOSER_DISABLE_XDEBUG_WARN=1
+install:
+  - travis_retry composer install --no-interaction --prefer-dist
 
-install: travis_retry composer install --prefer-dist
+script:
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
-script: vendor/bin/phpunit
+after_success:
+  - travis_retry php vendor/bin/coveralls
 
 notifications:
   email:
