--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "orchestra/testbench-browser-kit": "~3.1"
+        "satooshi/php-coveralls": "~1.0"
     },
     "autoload": {
         "psr-4": {
