--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
+        "orchestra/testbench": "~3.0",
         "satooshi/php-coveralls": "~1.0"
     },
     "autoload": {
