--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,15 @@ sudo: false
 
 matrix:
   include:
-    - php: 5.6
     - php: 7.0
     - php: 7.1
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 install:
-  - travis_retry composer install --no-interaction --prefer-dist
+  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
