--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "illuminate/support": "~5.2",
-        "prettus/l5-repository": "^2.6",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
