--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.2"
+        "illuminate/support": "~5.2",
+        "prettus/l5-repository": "^2.6",
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
