--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.2",
-        "prettus/l5-repository": "^2.6"
+        "illuminate/support": "~5.2|~6.0|~7.0|~8.0|~9.0",
+        "prettus/l5-repository": "~2.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "orchestra/testbench": "~3.0",
-        "satooshi/php-coveralls": "~1.0"
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "~3.0|~4.0|~5.0|~6.0|~7.0",
     },
     "autoload": {
         "psr-4": {
