--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -7,8 +7,10 @@ on:
     branches: [main]
 
 jobs:
-  tests:
+  phpunit:
+    if: "!contains(github.event.head_commit.message, '--skip-ci')"
     runs-on: ubuntu-latest
+    
     strategy:
       fail-fast: false
       matrix:
