--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "~3.0|~4.0|~5.0|~6.0|~7.0",
+        "orchestra/testbench": "~3.0|~4.0|~5.0|~6.0|~7.0"
     },
     "autoload": {
         "psr-4": {
