--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "prettus/l5-repository": "~2.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^7.5|^8.0|^9.5",
         "orchestra/testbench": "~3.0|~4.0|~5.0|~6.0|~7.0"
     },
     "autoload": {
