--- a/.github/workflows/phpunit-L5.yml
+++ b/.github/workflows/phpunit-L5.yml
@@ -20,6 +20,8 @@ jobs:
             testbench: ^3.2
           - laravel: 5.8
             testbench: ^3.8
+            
+    name: PHP ${{ matrix.php }} - L${{ matrix.laravel }}
 
     steps:
     - name: Checkout
