--- a/.github/workflows/phpunit-L9.yml
+++ b/.github/workflows/phpunit-L9.yml
@@ -18,6 +18,8 @@ jobs:
         include:
           - laravel: 9.*
             testbench: ^7.0
+            
+    name: PHP ${{ matrix.php }} - L${{ matrix.laravel }}
 
     steps:
     - name: Checkout
